--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,6 +69,16 @@ body{
     background-color: white;
     cursor: pointer;
     color: black;
+    transition: all 300ms ease-in-out;
+}
+
+.button__search{
+    color: black;
+    transition: all 300ms ease-in-out;
+}
+
+.button__search:hover{
+    color: rgb(0, 119, 255);
 }
 
 
